# Student_Performance_API

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: mkdocs.yml  python-ci.yml
app/: app.py  config.py
models/: student_performance_model.pkl
notebooks/: exam_score_prediction.ipynb
tests/: test_data.py
