[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "12factorapp"
version = "0.0.1"
description = "FastAPI project"
authors = [
  { name = "Shruti Maharjan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["12factorapp"]
include = ["pyproject.toml", "12factorapp/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["12factorapp"]
force-sort-within-sections = true

